Updated color scheme and fixed project spacing and buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,8 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: #333;
-    color: #fff;
+    background: #e8e9ec;
+    color: black;
     line-height: 1.6;
     height: 100vh;
     overflow: hidden;
@@ -36,7 +36,7 @@ body {
     z-index: 1;
     display: flex;
     width: 100%;
-    height: 60px;
+    height: 40px;
     background: rgba(0,0,0,0.7);
 }
 
@@ -59,7 +59,7 @@ body {
 }
 
 .navbar ul li a:hover {
-    color: skyblue;
+    color: #3282b8;
 }
 
 /* Sections */
@@ -85,12 +85,12 @@ section p {
 }
 
 section#home {
-    background: url('images/space.jpg') no-repeat center center/cover;
+    background: url('images/background-image.jpg') no-repeat center center/cover;
 }
 
 /* Icons */
 i {
-    color: #fff;
+    color: black;
     font-size: 2.5rem;
     cursor: default;
     list-style: none;
@@ -99,7 +99,7 @@ i {
 }
 
 i:hover {
-    color: white;
+    color: #3282b8;
     opacity: 1;
     transition: 0.4s;
 }
@@ -111,7 +111,7 @@ ul.icons li {
 
 /* Labeled Icons */
 ul.labeled-icons {
-    color: #fff;
+    color: black;
     list-style: none;
     text-align: left;
 }
@@ -132,47 +132,61 @@ ul.labeled-icons i {
 .button {
     background-color: transparent;
     border-radius: 0.35em;
-    border: solid 3px #fff;
+    border: solid 3px black;
     opacity: 0.6;
+    text-decoration: none;
+}
+
+.button a {
+    color: black;
+    text-decoration: none;
+    font-size: 1.5em;
+    padding: 0.5em;
+    text-align: center;
 }
 
 .button:hover {
     opacity: 1;
     transition: 0.4s;
-    border: solid 3px #fff;
+    border: solid 3px #3282b8;
 }
 
-.button a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.5em;
-    padding: 0.5em;
+.button:hover a {
+    transition: 0.4s;
+    color: #3282b8;
 }
 
 .proj-button {
     background-color: transparent;
     border-radius: 0.35em;
-    border: solid 3px #fff;
+    border: solid 3px black;
     opacity: 0.6;
     text-align: center;
-    width: 10px;
+    font-size: 1em;
+    padding: 0.3em;
+    display: block;
+    margin: 5px auto;
+}
+
+.proj-button a {
+    color: black;
+    text-decoration: none;
 }
 
 .proj-button:hover {
     opacity: 1;
     transition: 0.4s;
-    border: solid 3px #fff;
+    border: solid 3px #3282b8;
 }
 
-.proj-button a {
-    color: #fff;
-    text-decoration: none;
+.proj-button:hover a {
+    transition: 0.4s;
+    color: #3282b8;
 }
 
 /* Projects */
 .proj-container {
-    border: 3px solid #fff;
-    padding: 20px;
+    padding: 10px;
     width: 95%;
 }
 
@@ -190,21 +204,25 @@ ul.labeled-icons i {
 
 .proj-section-left {
     position: relative;
+    height: 100%;
     width: 46%;
     float: left;
-    border: 1px solid red;
     padding-left: 10px;
+    border-radius: 0.35em;
+    border: 1px solid black;
 }
 
 .proj-section-right {
     position: relative;
+    height: 100%;
     width: 46%;
     float: right;
-    border: 1px solid blue;
     padding-left: 10px;
+    border-radius: 0.35em;
+    border: 1px solid black;
 }
 
-/* Carousel - Left Side */
+/* Slider - Left Side */
 .slider-left {
     width: 200px;
     height: 400px;
@@ -212,7 +230,6 @@ ul.labeled-icons i {
     position: relative;
     border-radius: 10px;
     overflow: hidden;
-    border: 2px solid pink;
 }
 
 .slides-left {
@@ -236,6 +253,11 @@ ul.labeled-icons i {
 }
 
 /* Slider - Right Side */
+.slider-align-right {
+    display: flex;
+    justify-content: center;
+}
+
 .slider-right {
     width: 350px;
     height: 250px;
@@ -243,7 +265,6 @@ ul.labeled-icons i {
     position: relative;
     border-radius: 10px;
     overflow: hidden;
-    border: 2px solid pink;
 }
 
 .slides-right {
@@ -271,60 +292,49 @@ ul.labeled-icons i {
     display: flex;
     position: absolute;
     width: 100%;
+    padding: 5px;
     bottom: 0;
     left: 0;
     justify-content: center;
-    background: gray;
-    border: 2px solid mediumpurple;
+    background: black;
 }
 
-.manual-btn {
-    border: 2px solid blue;
-    padding: 5px;
+.slider-btn {
+    border: 2px solid #3282b8;
+    padding: 6px;
     border-radius: 10px;
     cursor: pointer;
-    transition: 1s;
+    transition: .5s;
 }
 
-.manual-btn:not(:last-child) {
+.slider-btn:not(:last-child) {
     margin-right: 40px;
 }
 
-.manual-btn:hover {
-    background: purple;
+.slider-btn:hover {
+    background: white;
 }
 
-#radio1:checked ~ .first{
+#radio1:checked ~ .first {
     margin-left: 0;
 }
-#radio2:checked ~ .first{
+
+#radio2:checked ~ .first {
     margin-left: -20%;
 }
-#radio3:checked ~ .first{
+
+#radio3:checked ~ .first {
      margin-left: -40%;
- }
+}
 
-#radio4:checked ~ .first{
+#radio4:checked ~ .first {
     margin-left: 0;
 }
-#radio5:checked ~ .first{
+
+#radio5:checked ~ .first {
     margin-left: -20%;
 }
-#radio6:checked ~ .first{
+
+#radio6:checked ~ .first {
     margin-left: -40%;
-}
-
-.carousel {
-    align-items: center;
-    display: flex;
-    margin: 2rem auto;
-    overflow: hidden;
-    position: relative;
-    width: 300px;
-}
-
-.carousel-images {
-    display: flex;
-    transform: translate(0);
-    transition: 0.25s;
 }
